@@ -16,6 +16,7 @@
  */
 package de.gerdiproject.harvest.rest;
 
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.ParameterizedType;
 import java.util.function.Function;
 
@@ -57,7 +58,7 @@ public abstract class AbstractRestResource<T extends AbstractRestObject<T, ?>, S
      * @param gson a gson instance used to parse JSON requests and responses
      */
     @SuppressWarnings("unchecked") // this warning is suppressed, because the only generic Superclass MUST be T2. The cast will always succeed.
-    public AbstractRestResource(Gson gson)
+    public AbstractRestResource(final Gson gson)
     {
         final Class<S> getEventClass =
             (Class<S>)((ParameterizedType) getClass().getGenericSuperclass()).getActualTypeArguments()[1];
@@ -66,8 +67,13 @@ public abstract class AbstractRestResource<T extends AbstractRestObject<T, ?>, S
         T retrievedObject;
 
         try {
-            retrievedObject = EventSystem.sendSynchronousEvent(getEventClass.newInstance());
-        } catch (InstantiationException | IllegalAccessException e) {
+            retrievedObject = EventSystem.sendSynchronousEvent(getEventClass.getDeclaredConstructor().newInstance());
+        } catch (InstantiationException
+                     | IllegalAccessException
+                     | IllegalArgumentException
+                     | InvocationTargetException
+                     | NoSuchMethodException
+                     | SecurityException e) {
             retrievedObject = null;
         }
 
@@ -97,7 +103,7 @@ public abstract class AbstractRestResource<T extends AbstractRestObject<T, ?>, S
      */
     @GET
     @Produces({MediaType.TEXT_PLAIN, MediaType.APPLICATION_JSON})
-    public Response getInfoText(@Context UriInfo uriInfo)
+    public Response getInfoText(@Context final UriInfo uriInfo)
     {
         // abort if object is not initialized, yet
         if (restObject == null)
@@ -128,9 +134,10 @@ public abstract class AbstractRestResource<T extends AbstractRestObject<T, ?>, S
                 // try to parse the JSON object
                 return HttpResponseFactory.createOkResponse(gson.toJsonTree(responseObject));
             }
-        } catch (IllegalArgumentException e) {
+        } catch (final IllegalArgumentException e) {
             return HttpResponseFactory.createBadRequestResponse(e.getMessage());
-        } catch (Exception e) {
+
+        } catch (final RuntimeException e) { // NOPMD it's up to the implementation which exceptions to throw, but they are all treated equally
             return HttpResponseFactory.createKnownErrorResponse(e.getMessage());
         }
     }
@@ -160,8 +167,8 @@ public abstract class AbstractRestResource<T extends AbstractRestObject<T, ?>, S
      * @return a response that describes the status of the operation
      */
     protected <P, R> Response changeObject(
-        Function<P, R> changeFunction,
-        String jsonRaw, Class<P> jsonClass)
+        final Function<P, R> changeFunction,
+        final String jsonRaw, final Class<P> jsonClass)
     {
         // abort if object is not initialized, yet
         if (restObject == null)
@@ -175,7 +182,7 @@ public abstract class AbstractRestResource<T extends AbstractRestObject<T, ?>, S
 
         try {
             jsonBody = gson.fromJson(jsonRaw,  jsonClass);
-        } catch (JsonSyntaxException | NullPointerException e) {
+        } catch (JsonSyntaxException | NullPointerException e) { // NOPMD NPEs can be thrown due to invalid JSON strings
             jsonBody = null;
         }
 
@@ -189,9 +196,9 @@ public abstract class AbstractRestResource<T extends AbstractRestObject<T, ?>, S
 
         try {
             response = changeFunction.apply(jsonBody);
-        } catch (IllegalArgumentException e) {
+        } catch (final IllegalArgumentException e) {
             return HttpResponseFactory.createBadRequestResponse(e.getMessage());
-        } catch (IllegalStateException e) {
+        } catch (final IllegalStateException e) {
             return HttpResponseFactory.createServerErrorResponse();
         }
 
